k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zoetic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zoetic
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: zoetic
    spec:
      terminationGracePeriodSeconds: 60
      restartPolicy: Always
      containers:
        - name: zoetic-<VERSION>
          image: registry.gitlab.com/zoetic-assigment/backend:<VERSION>
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
      imagePullSecrets:
        - name: registry-credentials
