k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zoetic
  namespace: zoetic
spec:
  selector:
    app: zoetic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
