k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zoetic-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ozdemirden.com
      http:
        paths:
          - backend:
              serviceName: zoetic
              servicePort: 80
            path: /
